@startuml Diagramme_de_Classes_Reel

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classBackgroundColor #FFFDE7
skinparam classBorderColor #D84315
skinparam ArrowColor #333333
skinparam enumBackgroundColor #E3F2FD
skinparam enumBorderColor #1565C0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80

title Diagramme de Classes — Finance RAG Project

' ═══════════════════════════════════════
'              ENUMS
' ═══════════════════════════════════════

enum UserRole {
  ADMIN
  FINANCE_USER
}

enum ReclamationPriority {
  LOW
  NORMAL
  HIGH
  URGENT
}

enum ReclamationStatus {
  PENDING
  IN_PROGRESS
  RESOLVED
  FAILED
}

enum DocumentCategory {
  finance
  notes
  conventions
  recueil
  other
}

enum DocumentStatus {
  processing
  indexed
  failed
}

enum LegalStatus {
  actif
  futur
  remplace
  abroge
}

enum LegalDocumentType {
  loi
  decret
  arrete
  note
  circulaire
  autre
}

enum LegalRelationType {
  none
  remplace
  abroge
}

' ═══════════════════════════════════════
'              CLASSES
' ═══════════════════════════════════════

class UserModel {
  + id : String
  + nom : String
  + prenom : String
  + email : String
  + passwordHash : String
  + role : UserRole
  + telephone : String
  + avatarUrl : String
  + adresse : String
  + birthDate : String
  + direction : String
  + service : String
  + poste : String
  + matricule : String
  + bureau : String
  + manager : String
  + memberSince : String
  + createdAt : DateTime
  + deletedAt : DateTime
  --
  + sign_in(email, password) : AuthResponse
  + build_session_info(current_user, current_session) : SessionInfoOut
}

class SessionModel {
  + id : String
  + userId : String
  + hashedToken : String
  + csrfToken : String
  + authMethod : String
  + ssoSubject : String
  + ssoAccessToken : String
  + ssoRefreshToken : String
  + accessExpiresAt : DateTime
  + refreshExpiresAt : DateTime
  + idleExpiresAt : DateTime
  + absoluteExpiresAt : DateTime
  + createdAt : DateTime
  + lastActivityAt : DateTime
  + closedAt : DateTime
  + closureReason : String
  + isEarlyClosure : Boolean
  --
  + refresh_session(current_session) : SessionModel
  + validate_csrf(cookie_token, header_token, current_session) : Boolean
}

class NotificationModel {
  + id : String
  + userId : String
  + notificationType : String
  + title : String
  + description : String
  + link : String
  + isRead : Boolean
  + createdAt : DateTime
  + readAt : DateTime
  --
  + list_notifications(current_user, limit) : NotificationListResponse
  + mark_as_read(current_user, notification_id) : NotificationOut
}

class ReclamationModel {
  + id : String
  + userId : String
  + userEmail : String
  + referenceNumber : String
  + subject : String
  + description : String
  + issueCategory : String
  + customIssueCategory : String
  + priority : ReclamationPriority
  + status : ReclamationStatus
  + attachmentName : String
  + attachmentPath : String
  + attachmentSize : Integer
  + attachmentContentType : String
  + adminReply : String
  + adminReplyAt : DateTime
  + repliedByAdminId : String
  + lastAdminActionAt : DateTime
  + lastAdminActorName : String
  + takenByAdminId : String
  + takenByAdminName : String
  + replyAcknowledged : Boolean
  + firstHandledAt : DateTime
  + slaOverdueNotifiedAt : DateTime
  + createdAt : DateTime
  + updatedAt : DateTime
  + deletedAt : DateTime
  + deletedByUserId : String
  + history : List<HistoryEntry>
  --
  + create_reclamation(current_user, subject, description, priority, attachment) : ReclamationOut
  + list_reclamations(current_user) : ReclamationListResponse
  + get_reclamation(current_user, reclamation_id) : ReclamationOut
  + update_reclamation(current_user, reclamation_id) : ReclamationOut
  + delete_reclamation(current_user, reclamation_id) : void
  + take_reclamation(admin_user, reclamation_id) : ReclamationOut
  + resolve_reclamation(reclamation_id, admin_reply, status) : ReclamationOut
  + mark_reply_read(current_user, reclamation_id) : ReclamationOut
  + get_reclamation_attachment_response_data(current_user, reclamation_id) : Tuple
  + compute_sla(reclamation) : SlaResult
}

class ConversationModel {
  + id : String
  + userId : String
  + title : String
  + isArchived : Boolean
  + createdAt : DateTime
  + updatedAt : DateTime
  + archivedAt : DateTime
  + deletedAt : DateTime
  --
  + get_conversations(user_id) : List<ConversationOut>
  + start_conversation(user_id) : ConversationOut
  + rename_conversation(user_id, conversation_id, summary) : ConversationOut
  + archive_conversation(user_id, conversation_id) : ConversationOut
  + restore_conversation(user_id, conversation_id) : ConversationOut
  + delete_conversation(user_id, conversation_id) : void
}

class ChatMessageModel {
  + id : String
  + conversationId : String
  + role : String
  + content : String
  + status : String
  + sources : List<Source>
  + feedback : String
  + feedbackAt : DateTime
  + feedbackUserId : String
  + createdAt : DateTime
  --
  + get_messages(user_id, conversation_id) : List<MessageOut>
  + ask_pending(user_id, content, conversation_id) : MessageOut
  + set_message_feedback(user_id, message_id, feedback) : MessageOut
  + get_generating_messages(user_id) : List<MessageOut>
  + get_feedback_stats() : FeedbackStats
}

class DocumentModel {
  + id : String
  + title : String
  + category : DocumentCategory
  + status : DocumentStatus
  + legalStatus : LegalStatus
  + legalType : LegalDocumentType
  + issuedAt : DateTime
  + datePublication : DateTime
  + dateEntreeVigueur : DateTime
  + relationToTarget : LegalRelationType
  + targetDocumentId : String
  + filePath : String
  + fileSize : Integer
  + fileType : String
  + description : String
  + extractedText : String
  + indexedByAdminId : String
  + deletedByAdminId : String
  + createdAt : DateTime
  + deletedAt : DateTime
  + indexedAt : DateTime
  + chunkCount : Integer
  + lastIndexError : String
  --
  + list_documents() : DocumentListResponse
  + search_documents(query) : DocumentSearchResponse
  + get_document_preview(document_id) : DocumentPreviewOut
  + get_document_file_response_data(document_id) : Tuple
  + delete_document_from_index(document_id, admin_id) : DocumentActionResponse
  + reindex_document(document_id, admin_id) : DocumentActionResponse
  + publish_scheduled_documents() : Integer
  + parse_document(file_path, extension) : String
  + run_pipeline(file_path, document_id) : void
  + apply_legal_succession(source_document) : void
  + resolve_status(document) : String
}

class AuditEventModel {
  + id : String
  + occurredAt : DateTime
  + userId : String
  + userName : String
  + userEmail : String
  + userRole : String
  + actionType : String
  + actionLabel : String
  + category : String
  + entityType : String
  + entityId : String
  + entityLabel : String
  + summary : String
  + metadata : Object
  --
  + get_activities(filters) : AuditActivityList
  + log_document_action(current_user, action_type, document_id) : void
  + log_failed_login(email, reason) : void
  + log_login_success(current_user) : void
  + log_logout(current_user) : void
  + log_chat_message(current_user, content, conversation_id) : void
  + log_reclamation_action(current_user, action_type, reclamation_id) : void
  + log_system_event(action_type, action_label, summary) : void
}

class DocumentFavoriteModel {
  + id : String
  + documentId : String
  + userId : String
  + favoritedAt : DateTime
  --
  + set_document_favorite(user_id, document_id) : void
}

' ═══════════════════════════════════════
'              RELATIONS
' ═══════════════════════════════════════

AuditEventModel   "0..*" -->  "1"    UserModel         : userId >
UserModel         "1"    *--  "0..*" SessionModel      : possède >
UserModel         "1"    *--  "0..*" NotificationModel : possède >
UserModel         "1"    o--  "0..*" ReclamationModel  : soumet >
UserModel         "1"    *--  "0..*" ConversationModel : possède >
ConversationModel "1"    *--  "1..*" ChatMessageModel  : contient >
DocumentModel     "0..*" -->  "0..1" DocumentModel     : targetDocumentId >

' Relation many-to-many avec classe d'association
UserModel     "1" --- "0..*" DocumentModel
(UserModel, DocumentModel) .. DocumentFavoriteModel

' ═══════════════════════════════════════
'         USAGES DES ENUMS
' ═══════════════════════════════════════

UserModel         ..> UserRole
ReclamationModel  ..> ReclamationPriority
ReclamationModel  ..> ReclamationStatus
DocumentModel     ..> DocumentCategory
DocumentModel     ..> DocumentStatus
DocumentModel     ..> LegalStatus
DocumentModel     ..> LegalDocumentType
DocumentModel     ..> LegalRelationType

@enduml
